# omni-lab

./: .gitignore  .gitmodules  README.md  eval_text.py  eval_vision.py  llama_omni_zh_prompt.patch  omni_duplex_demo.py  omni_web_demo.py  pyproject.toml  run_omni_demo.sh  run_q8_eval.sh
apps/: assistant.py  second_brain.py
bench/: COMPARE_gemma4_26b_vs_qwen35.md  PLAN.md  RESULTS.md  RESULTS_R2.md  TEST_PLAN_R2.md  USAGE.md  bench.py  run_e4b_test.sh  run_r2.sh  run_remaining.sh  setup_models.sh  start_vllm_fp8.sh  ttft_compare.py
cases/edge-agent/: download_models.sh  pyproject.toml
cases/edge-agent/apps/: assistant.py
cases/edge-agent/docs/: ARCHITECTURE.md  CHANGELOG.md  STEP_BY_STEP.md
cases/edge-agent/edge_agent/: __init__.py  config.py  errors.py  memory.py  scheduler.py  tools.py
cases/edge-agent/edge_agent/agent/: __init__.py  conversation.py  query.py
cases/edge-agent/edge_agent/context/: __init__.py  builder.py  renderers.py  types.py
cases/edge-agent/edge_agent/providers/: __init__.py  ollama.py
cases/edge-agent/edge_agent/tools_builtin/: __init__.py  computer.py  filesystem.py  shell.py  web.py
cases/edge-agent/memory/: MEMORY.md  USER.md  vectors.npz
cases/edge-agent/tests/: conftest.py  test_context.py  test_events.py  test_memory.py  test_ollama.py
docs/: ARCHITECTURE.md  SCENARIOS.md
edge_agent/: __init__.py  api.py  events.py  memory.py  router.py  state.py  tools.py
eval_results/: REPORT.md  mmstar_results.jsonl  mmstar_results_Q8_0.jsonl  mmstar_summary.json  mmstar_summary_Q4_K_M.json  mmstar_summary_Q8_0.json
(+120 files in other folders)
