[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-agent"
version = "0.1.0"
description = "Edge-native private AI agent framework with dual-system cognitive architecture"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "ollama>=0.4",
    "httpx>=0.27",
    "duckduckgo-search>=7.0",
    "numpy>=2.0",
    "soundfile>=0.13",
    "lxml>=5.0",
    "flask>=3.0",
    "flask-sock>=0.7",
]

[project.optional-dependencies]
memory = [
    "sentence-transformers>=3.0",
]
computer = [
    "pyautogui>=0.9",
    "pillow>=10.0",
]
nanobot = [
    "nanobot",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
include = ["edge_agent*"]

[tool.setuptools.package-data]
edge_agent = ["web/*.html", "web/*.css", "web/*.js"]
